Improve memory usage and performance by: * Using AOT cache * Using tuned JAVA_OPTIONS * Lowering thread pool sizes (Jetty and H2)